# Autoscoper

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README  README.md  SuperBuild.cmake  callbacks.hpp
.github/workflows/: black.yml  ci.yml  lint-matlab.yml  (+2 more)
CMake/: AutoscoperInstallQt.cmake  ExternalProjectDependency.cmake  PreventInSourceBuilds.cmake  autoscoper_set_env.bat.in  autoscoper_set_env.sh.in
Documentation/: about.md  conf.py  get-help.md  getting-started.md  hierarchical-3d-registration.md  index.md  requirements.txt  shortcuts.md  transforms.md  user-interface.md
Setup Project/: Setup Project.aip  Setup Project.aiproj
Superbuild/: External_GLEW.cmake  External_ITK.cmake  External_JsonCpp.cmake  External_LIBTIFF.cmake  External_OpenCL-CLHPP.cmake  External_OpenCL-Headers.cmake  External_OpenCL-ICD-Loader.cmake  External_TIFF.cmake  External_VTK.cmake
autoscoper/: CMakeLists.txt
autoscoper/src/: main.cpp
autoscoper/src/core/: History.hpp
autoscoper/src/net/: Socket.cpp  Socket.h
autoscoper/src/ui/: AboutAutoscoper.cpp  AboutAutoscoper.h  AdvancedOptionsDialog.cpp  AdvancedOptionsDialog.h  AutoscoperMainWindow.cpp  AutoscoperMainWindow.h  CameraBox.cpp  CameraBox.h  CameraTreeWidgetItem.cpp  CameraTreeWidgetItem.h  CameraViewWidget.cpp  CameraViewWidget.h  FilterDockWidget.cpp  FilterDockWidget.h  FilterTreeWidget.cpp  FilterTreeWidget.h  FilterTreeWidgetItem.cpp  FilterTreeWidgetItem.h  FilterTreeWidgetParameter.cpp  FilterTreeWidgetParameter.h  GLTimeline.cpp  GLTimeline.h  GLTracker.cpp  GLTracker.h  GLView.cpp  GLView.h  GLWidget.cpp  GLWidget.h  ImportExportTrackingOptionsDialog.cpp  ImportExportTrackingOptionsDialog.h  Manip3D.cpp  Manip3D.hpp  ModelViewTreeWidgetItem.cpp  ModelViewTreeWidgetItem.h  NewTrialDialog.cpp  NewTrialDialog.h  OpenCLPlatformSelectDialog.cpp  OpenCLPlatformSelectDialog.h  QtCategoryButton.cpp  QtCategoryButton.h  (+15 more)
autoscoper/src/ui/ui-files/: AboutAutoscoper.ui  AdvancedOptionsDialog.ui  AutoscoperMainWindow.ui  CameraBox.ui  CameraViewWidget.ui  FilterDockWidget.ui  ImportExportTrackingOptionsDialog.ui  LoadCameraWidget.ui  NewTrialDialog.ui  OpenCLPlatformSelectDialog.ui  TimelineDockWidget.ui  TrackingOptionsDialog.ui  TrackingSetDockWidget.ui  VolumeBox.ui  VolumeDockWidget.ui
cmake/: CMakeLists-DownloadHelper.txt.in  ExternalProject.cmake  FindGTKGLEXT.cmake  FindTiffIO.cmake  MessageMacros.cmake  UseGLEW.cmake  UseLIBTIFF.cmake  shader_to_header.cmake
docker/: UbuntuDockerFile  build-and-run-ubuntu.ps1
libautoscoper/: CMakeLists.txt
libautoscoper/src/: AutoscoperConfigure.h.in  Backtrace.cpp  Backtrace.hpp  Camera.cpp  Camera.hpp  CoordFrame.cpp  CoordFrame.hpp  DownhillSimplex.cpp  DownhillSimplex.hpp  Filter.hpp  FilterParticle.cpp  FilterParticle.hpp  ImageUtils.cpp  ImageUtils.hpp  KeyCurve.cpp  KeyCurve.hpp  Mesh.cpp  Mesh.hpp  PSO.cpp  PSO.hpp  PSO_kernel.cpp  Particle.hpp  PositionParticle.cpp  PositionParticle.hpp  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  TiffImage.cpp  TiffImage.h  Tracker.cpp  Tracker.hpp  Trial.cpp  Trial.hpp  Video.cpp  Video.hpp  View.cpp  View.hpp  Volume.cpp  Volume.hpp  VolumeDescription.cpp  VolumeDescription.cpp.bak  (+12 more)
libautoscoper/src/Win32/: dirent.h
libautoscoper/src/asys/: SystemTools.cxx  SystemTools.hxx
libautoscoper/src/gpu/cuda/: .clang-format  BackgroundRenderer.cpp  BackgroundRenderer.hpp  BackgroundRenderer_kernels.cu  BackgroundRenderer_kernels.h  CMakeLists.txt  Compositor_kernels.cu  Compositor_kernels.h  ContrastFilter.cpp  ContrastFilter.hpp  ContrastFilter_kernels.cu  ContrastFilter_kernels.h  CudaWrap.cpp  CudaWrap.hpp  DRRBackground_kernels.cu  DRRBackground_kernels.h  GaussianFilter.cpp  GaussianFilter.hpp  GaussianFilter_kernels.cu  GaussianFilter_kernels.h  HDist_kernels.cu  HDist_kernels.h  Merger_kernels.cu  Merger_kernels.h  Mult_kernels.cu  Mult_kernels.h  Ncc_kernels.cu  Ncc_kernels.h  PSO_kernel.cu  PSO_kernel.h  RadRenderer.cpp  RadRenderer.hpp  RadRenderer_kernels.cu  RadRenderer_kernels.h  RayCaster.cpp  RayCaster.hpp  RayCaster_kernels.cu  RayCaster_kernels.h  SharpenFilter.cpp  SharpenFilter.hpp  (+6 more)
libautoscoper/src/gpu/cuda/cutil/: .clang-format  cutil.h  cutil_create_tex_obj.h  cutil_gl_error.h  cutil_gl_inline.h  cutil_inline.h  cutil_inline_bankchecker.h  cutil_inline_drvapi.h  cutil_inline_runtime.h  cutil_math.h
libautoscoper/src/gpu/opencl/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  CMakeLists.txt  Compositor.cpp  Compositor.hpp  ContrastFilter.cpp  ContrastFilter.hpp  DRRBackground.cpp  DRRBackground.hpp  DistanceField.cpp  DistanceField.hpp  EOSRayCaster.cpp  EOSRayCaster.hpp  GaussianFilter.cpp  GaussianFilter.hpp  Hdist.cpp  Hdist.hpp  Merger.cpp  Merger.hpp  Mult.cpp  Mult.hpp  Ncc.cpp  Ncc.hpp  OpenCL.cpp  OpenCL.hpp  RadRenderer.cpp  RadRenderer.hpp  RayCaster.cpp  RayCaster.hpp  SharpenFilter.cpp  SharpenFilter.hpp  SobelFilter.cpp  SobelFilter.hpp
libautoscoper/src/gpu/opencl/kernel/: BackgroundRenderer.cl  CMakeLists.txt  Compositor.cl  ContrastFilter.cl  DRRBackground.cl  DistanceField.cl  EosRayCaster.cl  GaussianFilter.cl  Hdist.cl  HdistSum.cl  Merger.cl  Mult.cl  Ncc.cl  NccSum.cl  RadRenderer.cl  RayCaster.cl  SharpenFilter.cl  SobelFilter.cl
libautoscoper/src/gpu/opencl/kernel/cmake/: shader_templ.h.in  shader_to_header.cmake
libautoscoper/src/schema/: vtkCamera-schema-v1.0.json
libautoscoper/tests/: CMakeLists.txt  TestFileSystemCompat.cpp
math/: Intersection.hpp  Matrix.hpp  Quaternion.hpp  Ray.hpp  Vector.hpp
matlab/: getNCC.m  getNCC_This_Frame.m  getPose.m  openConnection.m  optimizeFrame.m  setFrame.m  testSocket.m  testSocket_getNCC_range.m  testSocket_optimizeFrameByMatlab.m
scripts/python/: README.md  pyproject.toml
scripts/python/PyAutoscoper/: connect.py  validators.py
scripts/python/docs/source/: conf.py  connect.rst  example.rst  index.rst
scripts/python/examples/: example.py  pyautoscoper-examples.py
scripts/python/tests/: test_enums.py  test_validators.py
(+65 files in other folders)
